Bug 493217 - KDE Plasma 'Move Mouse to Focus' Meta+F5 doesn't work
Summary: KDE Plasma 'Move Mouse to Focus' Meta+F5 doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.1.5
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 432536 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-09-16 17:22 UTC by reports_go_brrr
Modified: 2024-09-21 15:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
Showcase (2.07 MB, video/mp4)
2024-09-16 17:22 UTC, reports_go_brrr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description reports_go_brrr 2024-09-16 17:22:53 UTC
Created attachment 173737 [details]
Showcase

SUMMARY
If Title haven't explained what I mean, then check out the video I attached.
Works under X11 and Wayland.

STEPS TO REPRODUCE
1. Click on the window
2. Press Meta+F5

OBSERVED RESULT
Mouse moves to upper-left coner of the screen.

EXPECTED RESULT
Make it move to the center of focused window.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.9-arch1-2 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Vanilla KDE Plasma, vanilla EndeavourOS.
Keys capturing done by ShowMeTheKey.
Comment 1 Nate Graham 2024-09-16 17:48:18 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2024-09-16 17:57:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6390
Comment 3 Zamundaaa 2024-09-16 19:09:38 UTC
Git commit c3ed817ef4a3cd0ad970d01a432f83869e51cbf9 by Xaver Hugl.
Committed on 16/09/2024 at 17:56.
Pushed by zamundaaa into branch 'master'.

plugins/zoom: make "Move Mouse to Focus" shortcut do at least something reasonable on Wayland

Focus tracking with accessibility APIs is disabled on Wayland because it causes hangs, but we
can at least warp the pointer to the active window instead of (0, 0)

M  +10   -1    src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/c3ed817ef4a3cd0ad970d01a432f83869e51cbf9
Comment 4 Zamundaaa 2024-09-16 19:50:51 UTC
Git commit 7d6d600935119ed20fb52d070782ce96e6637e6e by Xaver Hugl.
Committed on 16/09/2024 at 19:09.
Pushed by zamundaaa into branch 'Plasma/6.2'.

plugins/zoom: make "Move Mouse to Focus" shortcut do at least something reasonable on Wayland

Focus tracking with accessibility APIs is disabled on Wayland because it causes hangs, but we
can at least warp the pointer to the active window instead of (0, 0)


(cherry picked from commit c3ed817ef4a3cd0ad970d01a432f83869e51cbf9)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +10   -1    src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/7d6d600935119ed20fb52d070782ce96e6637e6e
Comment 5 Yevhen Popok 2024-09-21 06:06:57 UTC
*** Bug 432536 has been marked as a duplicate of this bug. ***
Comment 6 reports_go_brrr 2024-09-21 15:59:52 UTC
Would be there any fix of Meta+F5 for X11?