plugins/zoom: make "Move Mouse to Focus" shortcut do at least something reasonable on Wayland

Focus tracking with accessibility APIs is disabled on Wayland because it causes hangs, but we
can at least warp the pointer to the active window instead of (0, 0)

BUG: 493217